--- a/01_agama/dirgha/DA_16.md
+++ b/01_agama/dirgha/DA_16.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Long Discourses | 16. Sujata
+title: The Long Discourses | 16. Sujāta
 type: kramdown
 base: ../../
 previous: DA_15.html
@@ -8,30 +8,30 @@ next: DA_17.html
 ---
 
 # [The Long Discourses](index.html)
-## 16. Sujata
+## 16. Sujāta
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa of Rājagṛha. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
 
-2\. It was then that the Bhagavān put on his robe and took his bowl into the city to solicit alms. At the time, there was a prominent man’s son named Sujata[\[2\]](#n2){:#ref2} in Rājagṛha. Early in the morning, he left the city to go for a walk in a park. He bathed first, wetting his entire body. He then bowed in all directions around him: To the east, west, south, north, above, and below.
+2\. It was then that the Bhagavān put on his robe and took his bowl into the city to solicit alms. At the time, there was a prominent man’s son named Sujāta[\[2\]](#n2){:#ref2} in Rājagṛha. Early in the morning, he left the city to go for a walk in a park. He bathed first, wetting his entire body. He then bowed in all directions around him: To the east, west, south, north, above, and below.
 {:#p2}
 
-3\. The Bhagavān then saw Sujata bathing before going for his walk in a park, wetting his entire body, and bowing in all directions. Upon seeing this, the Bhagavān went to Sujata and asked him: “Why did you leave the city in the early morning to go to a park, wet your entire body, and bow in all directions?”
+3\. The Bhagavān then saw Sujāta bathing before going for his walk in a park, wetting his entire body, and bowing in all directions. Upon seeing this, the Bhagavān went to Sujāta and asked him: “Why did you leave the city in the early morning to go to a park, wet your entire body, and bow in all directions?”
 {:#p3}
 
-Sujata then said to the Buddha, “My father’s death is imminent, and he gave me this instruction: ‘When you go to bow, you should first bow to the east, south, west, north, above, and below.’ I don’t dare not carry out my father’s instruction, so after I’ve bathed, I first salute while facing east and then bow to the east. I do this for all the directions to the south, west, north, above, and below.”
+Sujāta then said to the Buddha, “My father’s death is imminent, and he gave me this instruction: ‘When you go to bow, you should first bow to the east, south, west, north, above, and below.’ I don’t dare not carry out my father’s instruction, so after I’ve bathed, I first salute while facing east and then bow to the east. I do this for all the directions to the south, west, north, above, and below.”
 
-4\. The Bhagavān then told Sujata, “Prominent man’s son, these directions are just names. It’s not that we don’t have this practice, but we don’t bow to these six directions to pay respect to them in my noble teaching.”
+4\. The Bhagavān then told Sujāta, “Prominent man’s son, these directions are just names. It’s not that we don’t have this practice, but we don’t bow to these six directions to pay respect to them in my noble teaching.”
 {:#p4}
 
-5\. Sujata said to the Buddha, “Please, Bhagavān! It would be good if you explained for me the way you bow to the six directions in the noble teaching!”
+5\. Sujāta said to the Buddha, “Please, Bhagavān! It would be good if you explained for me the way you bow to the six directions in the noble teaching!”
 
 The Buddha told the prominent man’s son, “Listen closely, listen closely! Consider it well, for I will explain this for you.”
 
-Sujata replied, “Very well. I’d be glad to hear it.”
+Sujāta replied, “Very well. I’d be glad to hear it.”
 {:#p5}
 
-6\. The Buddha told Sujata, “Suppose a prominent man or his son knows four binding actions and doesn’t do bad actions on four grounds. Moreover, he’s able to know six actions that squander wealth. That’s to say, Sujata, this prominent man or his son parts with four bad actions and pays homage to the six directions. It will be good for his present life, and he’ll obtain good results in later lives. It will be the source for this in his present life and later lives. In the present life, he be commended by wise people and gain this one worldly reward: When his body breaks up and his life ends, he’ll be born in a heavenly good place.
+6\. The Buddha told Sujāta, “Suppose a prominent man or his son knows four binding actions and doesn’t do bad actions on four grounds. Moreover, he’s able to know six actions that squander wealth. That’s to say, Sujāta, this prominent man or his son parts with four bad actions and pays homage to the six directions. It will be good for his present life, and he’ll obtain good results in later lives. It will be the source for this in his present life and later lives. In the present life, he be commended by wise people and gain this one worldly reward: When his body breaks up and his life ends, he’ll be born in a heavenly good place.
 {:#p6}
 
 7\. “Sujata, you should know, the four binding actions are 1. killing beings, 2. stealing, 3. engaging in sex, and 4. false speech. These are the four binding actions. What are the four grounds? They are 1. desire, 2. anger, 3. fear, and 4. delusion. If a prominent man or his son does bad actions on these four grounds, then he will decline [in reputation].”
@@ -45,7 +45,7 @@ Someone who has these four qualities\\
 Sees their reputation decline daily,\\
 Like the moon approaching its last day.”
 
-9\. The Buddha told Sujata, “If a prominent man or his son doesn’t do bad actions on these four grounds, then he’ll improve [in reputation].”
+9\. The Buddha told Sujāta, “If a prominent man or his son doesn’t do bad actions on these four grounds, then he’ll improve [in reputation].”
 {:#p9}
 
 10\. The Bhagavān then restated this in verse:
@@ -56,16 +56,16 @@ In desire, anger, fear, and delusion\\
 Will improve in reputation daily,\\
 Like the moon approaching fullness.”
 
-11\. The Buddha told Sujata, “The six actions that squander wealth are 1. indulging in alcohol, 2. gambling, 3. self-indulgence, 4. getting carried away at musical performances, 5. associating with bad friends, and 6. idleness. These are the six acts that squander wealth.
+11\. The Buddha told Sujāta, “The six actions that squander wealth are 1. indulging in alcohol, 2. gambling, 3. self-indulgence, 4. getting carried away at musical performances, 5. associating with bad friends, and 6. idleness. These are the six acts that squander wealth.
 {:#p11}
 
-12\. “Sujata, suppose a prominent man or his son understands these four binding actions, doesn’t do evil actions on these four grounds, and knows the six actions that squander wealth. Doing this, Sujata, he can part with these four grounds and make offerings to the six directions. It will be good for his present life and good in later lives. It’ll be the source for this in the present life and in later lives. In the present, he’ll be praised by wise people and gain this one worldly reward: When his body breaks up and his life ends, he’ll be born in a heavenly good place.
+12\. “Sujata, suppose a prominent man or his son understands these four binding actions, doesn’t do evil actions on these four grounds, and knows the six actions that squander wealth. Doing this, Sujāta, he can part with these four grounds and make offerings to the six directions. It will be good for his present life and good in later lives. It’ll be the source for this in the present life and in later lives. In the present, he’ll be praised by wise people and gain this one worldly reward: When his body breaks up and his life ends, he’ll be born in a heavenly good place.
 {:#p12}
 
-13\. “Sujata, you should know that drinking alcohol has six defects: 1. Loss of wealth, 2. becoming ill, 3. fighting, 4. circulation of a bad reputation, 5. sudden outbursts of anger, and 6. a daily loss in wisdom. Sujata, if they drink alcohol, that prominent man or his son’s family and property with decrease day by day.
+13\. “Sujata, you should know that drinking alcohol has six defects: 1. Loss of wealth, 2. becoming ill, 3. fighting, 4. circulation of a bad reputation, 5. sudden outbursts of anger, and 6. a daily loss in wisdom. Sujāta, if they drink alcohol, that prominent man or his son’s family and property with decrease day by day.
 {:#p13}
 
-14\. “Sujata, gambling has six defects. What are the six? 1. Daily loss of wealth, 2. enemies are made by winning, 3. being rebuked by wise people, 4. not being trusted by people, 5. estrangement from people, and 6. it causes thoughts of stealing. Sujata, engaging in gambling has these six defects. If they gamble, that prominent man or his son’s family and property will decrease day by day.
+14\. “Sujata, gambling has six defects. What are the six? 1. Daily loss of wealth, 2. enemies are made by winning, 3. being rebuked by wise people, 4. not being trusted by people, 5. estrangement from people, and 6. it causes thoughts of stealing. Sujāta, engaging in gambling has these six defects. If they gamble, that prominent man or his son’s family and property will decrease day by day.
 {:#p14}
 
 15\. “Self-indulgence has six defects: 1. Not protecting oneself, 2. not protecting one’s property, 3. not protecting one’s children, 4. being in constant fear, 5. being constantly trapped in painful and bad qualities, and 6. delighting in falsehoods. These are the six defects of self-indulgence. If a prominent man or his son engages in self-indulgence, his family and property will decrease day by day.
@@ -133,13 +133,13 @@ Work diligently from morning to night.\\
 When work isn’t left incomplete,\\
 You’ll never have anything to lament.”
 
-20\. The Buddha told Sujata, “There are four enemies who resemble friends that you should know and recognize. What are the four? 1. Those who submit out of fear, 2. who use beautiful words, 3. who follow out of respect, and 4. who are bad friends.”
+20\. The Buddha told Sujāta, “There are four enemies who resemble friends that you should know and recognize. What are the four? 1. Those who submit out of fear, 2. who use beautiful words, 3. who follow out of respect, and 4. who are bad friends.”
 {:#p20}
 
-21\. The Buddha told Sujata, “There are four things about those who submit out of fear. What are the four? 1. They take back when they’ve given, 2. they give little expecting more [in return], 3. their friendship is forced because of fear, and 4. they make friends for their own gain. These are the four things about those who submit out of fear.
+21\. The Buddha told Sujāta, “There are four things about those who submit out of fear. What are the four? 1. They take back when they’ve given, 2. they give little expecting more [in return], 3. their friendship is forced because of fear, and 4. they make friends for their own gain. These are the four things about those who submit out of fear.
 {:#p21}
 
-22\. The Buddha told Sujata, “There are also four things about friends who use beautiful words. What are the four? 1. They follow others whether they are good or bad, 2. abandon them when there are difficulties, 3. are welcoming in public but stop in private, and 4. refuse to help when misfortune strikes. These are the four things about friends who use beautiful words.
+22\. The Buddha told Sujāta, “There are also four things about friends who use beautiful words. What are the four? 1. They follow others whether they are good or bad, 2. abandon them when there are difficulties, 3. are welcoming in public but stop in private, and 4. refuse to help when misfortune strikes. These are the four things about friends who use beautiful words.
 {:#p22}
 
 23\. “There are four things about friends who follow out of respect. What are the four? 1. They’re deceptive at first, 2. they’re deceptive later, 3. they’re openly deceptive, and 4. they hit you with a cane when they notice a minor fault. These are the four things about friends who follow out of respect.
@@ -161,7 +161,7 @@ The wise should know and recognize them.\\
 They ought to be abandoned quickly,\\
 Like avoiding a dangerous road.”
 
-26\. The Buddha addressed Sujata, “There are four friends who bring many benefits when befriended and who will help and protect a person. What are the four? 1. Those who stop what’s wrong, 2. who are merciful, 3. who are beneficial, and 4. who are cooperative. These four friends bring many benefits when befriended and will help and protect a person. They should be befriended.
+26\. The Buddha addressed Sujāta, “There are four friends who bring many benefits when befriended and who will help and protect a person. What are the four? 1. Those who stop what’s wrong, 2. who are merciful, 3. who are beneficial, and 4. who are cooperative. These four friends bring many benefits when befriended and will help and protect a person. They should be befriended.
 {:#p26}
 
 27\. “Sujata, there are four things about those who stop what’s wrong, which bring many benefits and help and protect a person. What are the four? 1. They can stop someone who they see are doing evil, 2. they show people what’s honest and correct, 3. they’re kind, sympathetic, and mindful, and 4. they show a person the road to heaven. These are the four things about those who stop what’s wrong, which bring many benefits and help and protect a person.
@@ -194,7 +194,7 @@ He’ll be friends with substantial friends.\\
 The friend who perfects the precepts\\
 Is like a torch-bearer lighting the way.”
 
-32\. The Buddha told Sujata, “You should know the six directions. What are the six directions? Parents are to the east, teachers and elders are to the south, wives are to the west, relatives are to the north, servants are below, and ascetics, priests, and noble practitioners are above.
+32\. The Buddha told Sujāta, “You should know the six directions. What are the six directions? Parents are to the east, teachers and elders are to the south, wives are to the west, relatives are to the north, servants are below, and ascetics, priests, and noble practitioners are above.
 {:#p32}
 
 33\. “Sujata, someone with parents should respect and follow them in five ways. What are the five? 1. They should provide support, so they are without want, 2. always offer to do things for their parents first, 3. respect and follow their parents without going against them, 4. don’t dare to contradict a proper instruction from their parents, and 5. don’t end a proper profession pursued by their parents.
@@ -319,13 +319,13 @@ His household won’t decline.\\
 His treasury will accrue interest daily\\
 Like the ocean swelled by many rivers.”
 
-51\. At that point, Sujata said to the Bhagavān, “Very good, Bhagavān! That was what I hoped to do before, but it goes beyond my father’s instruction. The Tathāgata’s explanation is like turning upright what’s overturned, opening up something closed, bringing understanding to what’s confused, and a lamp in a dark room to those with eyes to see. He awakens the fool who’s in the dark with countless methods that make the clean teaching plain.
+51\. At that point, Sujāta said to the Bhagavān, “Very good, Bhagavān! That was what I hoped to do before, but it goes beyond my father’s instruction. The Tathāgata’s explanation is like turning upright what’s overturned, opening up something closed, bringing understanding to what’s confused, and a lamp in a dark room to those with eyes to see. He awakens the fool who’s in the dark with countless methods that make the clean teaching plain.
 {:#p51}
 
 52\. “Why is that? The Buddha is a Tathāgata, Arhat, and Completely Awakened One, so he’s able to reveal clear instruction to the world. Now, I take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. Bhagavān, please permit me to become a layman in the correct teaching! Starting today, I will not kill, steal, commit adultery, lie, or drink alcohol for the rest of my life.”
 {:#p52}
 
-53\. Once Sujata had heard what the Buddha taught, he rejoiced and approved.
+53\. Once Sujāta had heard what the Buddha taught, he rejoiced and approved.
 {:#p53}
 
 ---
@@ -333,7 +333,7 @@ Like the ocean swelled by many rivers.”
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 16 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0070a19" target="_blank">T1.1.70a19-2c6</a>). The direct parallels for this <em>sūtra</em> are <a href="https://suttacentral.net/dn31" target="_blank">DN 31</a> and <a href="https://suttacentral.net/ma135" target="_blank">MĀ 135</a>. There are also alternate Chinese translations by An Shigao (<a href="https://cbetaonline.dila.edu.tw/zh/T0016_001" target="_blank">T16</a>) and Zhi Fadu (<a href="https://cbetaonline.dila.edu.tw/zh/T0017_001" target="_blank">T17</a>). As we shall see, DĀ 16 agrees with DN 31 more than the Sarvāstivāda version found in MĀ. [\[back\]](#ref1)
-2. {:#n2}*Sujata*. Ch. 善生. I’ve yet to find a Sanskrit attestation to this reading, but it seems the most likely name that 善生 (“Well Born”) translated. MĀ 135 and T17 also translate his name as 善生, but An Shigao seems to transliterate an equivalent of P. Siṅgāla (Skt. Śṛgāla), which means “jackal.” These parallels disagree in other details as well, indicating at least two or three versions. [\[back\]](#ref2)
+2. {:#n2}*Sujāta*. Ch. 善生. I’ve yet to find a Sanskrit attestation to this reading, but it seems the most likely name that 善生 (“Well Born”) translated. MĀ 135 and T17 also translate his name as 善生, but An Shigao seems to transliterate an equivalent of P. Siṅgāla (Skt. Śṛgāla), which means “jackal.” These parallels disagree in other details as well, indicating at least two or three versions. [\[back\]](#ref2)
 3. {:#n3}*panica ... talava ... suhana*. These transliterations are obscure to us today. Ch. 波內早 (MCh. bo-nei-zhao) might be a word like panica. Ch. 多羅槃 (MCh. duō-luó-pan) might be Skt. talava (“musician”) or a related word. Ch. 首呵那 (Man. shǒu-he-na) seems to be a word like suhana, but in Skt it would mean “easily killed.” [\[back\]](#ref3)
 
 ---
