--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -9,7 +9,7 @@ next: MA_176.html
 
 # [The Medium Discourses](index.html)
 ## Chapter 12: The Brahmins
-### 146. Parable of the Elephant’s Footprint
+### 146. Parable of the Elephant’s Footprint (2)
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {:#p1}
